--- a/styles.css
+++ b/styles.css
@@ -34,6 +34,9 @@ nav ul {
     display: flex;
     justify-content: center;
 }
+section h1{
+    font-size: 3vw;
+}
 
 nav ul li {
     display: inline;
@@ -345,11 +348,27 @@ section {
     font-size: 2vw;
   }
   .contactus-btn{
-    height: 50px;
     background-color: #ff5a00;
+    padding: 10px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 2vw;
+    margin: 4px 4px;
     border-radius: 40px;
-    font-size: 1.5rem;
+    border: none;
   }
+  .text-div{
+    display: block;
+    padding: 0% 10%;
+   text-align: left;
+    
+  }
+  .text-div p{
+   font-size: 1.5vw;
+   text-align: left;
+  }
+ 
 
 footer {
     background-color: #333;
@@ -414,6 +433,7 @@ footer {
         width: 100%;
         background-color: #48ff61;
         top: 0;
+        z-index: 1000;
     }
     .top-menu{
         position: fixed;
@@ -421,6 +441,7 @@ footer {
         width: 100%;
         background-color: #48ff61;
         top: 0;
+        z-index: 1000;
     }
     .Bouton-whatsapp{
         position: relative;
@@ -428,6 +449,12 @@ footer {
     }
     .recherch{
         padding-top: 20px;
+    }
+    .text-div p{
+        font-size: 3vw;
+       }
+       section h1{
+        font-size: 5vw;
     }
 }
 
