ajout nare svg pading

--- a/styles.css
+++ b/styles.css
@@ -281,6 +281,9 @@ section {
     height: 75%;
     object-fit: cover;
   }
+  .nare svg{
+    padding: 10px;
+  }
   .card-body {
     padding: 5px;
   }
