--- a/styles.css
+++ b/styles.css
@@ -151,7 +151,6 @@ nav a {
 }
 
 section {
-    padding: 50px;
     text-align: center;
 }
 .cards-section {
@@ -371,13 +370,376 @@ section {
    font-size: 1.5vw;
    text-align: left;
   }
+ #house{
+    width: 100%;
+    background-color: #48ff61;
+ }
+ .levelup-btn{
+    display: inline;
+ }
+ div.contact, textarea, input {
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+  }
+  
+  .contact {
+      color:#fff;
+      font-family: 'Open Sans', sans-serif;
+      font-weight:600;
+      line-height:20px;
+      }
+  .contact h2 {font-size:50px;}
+  .headline {
+      font-size:50px;
+  }
+    .center-btn {
+      text-align: center;
+    }
+  .container {
+    max-width: 510px;
+    min-width: 300px;
+    margin: 10px 0px;
+    padding-bottom:46px;
+    background-color: #fff;
+    border-radius:5px;
+    box-shadow: -10px 10px 12px 4px rgba(0, 0, 0, 0.1);
+
+  }
+  
+  .row {
+    width: 100%;
+    margin: 0 0 1em 0;
+    padding: 0 2.5em;
+  }
+  .info{
+    max-width: 310px;
+    min-width: 200px;
+    height: 350px;
+    background-color: #ff5a00;
+    margin-left: -10px;
+    border-radius: 5px;
+    padding: 20px;
+    display: grid;
+    justify-content: center;
+    align-items: center;
+  }
+  .contactline{    
+    display: inline-flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    align-items: center;
+    margin-bottom: 20px;
+  }
+  .roundicon{
+    border-radius: 20px;
+    background-color: #ff7c35;
+    width: 35px;
+    height: 35px;
+    padding: 4px;
+    display: flex;
+    justify-content: center;
+    margin-right: 20px;
+  }
+  .roundicon svg{
+    width: 30px;
+    height: 30px;
+  }
+  .row.header {
+    padding: 1.5em 2.5em;
+    border-bottom: 1px solid #ccc;
+    background-color:#63a7d6;
+    border-top-left-radius:5px;
+    border-top-right-radius:5px;
+    text-align:center;
+  }
+  .row.body {
+    padding: .5em 2.5em 1em;
+  }
+  
+  div.contact-elements p.pull-right {
+    float: right;
+  }
+  div.contact-elements p.left {float:left;
+    margin-right: 15px;}
+  
+  .btn {
+    font-size: 1.0625em;
+    display: inline-block;
+    padding: 0.74em 1.5em;
+    color: #fff;
+    border-width: 0 0 0 0;
+    border-radius:15px;
+    font-family: 'Lato', sans-serif;
+    font-weight: 300;
+    box-shadow: 1px 1px 4px #ccc;
+      -moz-box-shadow: 1px 1px 4px #ccc;
+      -webkit-box-shadow: 1px 1px 4px #ccc;
+      text-align: center;
+  }
+  .btn:hover {
+    background-color: #bfbfbf;
+  }
+  .btn.btn-submit {
+    background-color: #ff5a00;
+    border-bottom-color: #374d78;
+    display: flex;
+  }
+  .btn.btn-submit:hover {
+    background-color: #5f7db6;
+  }
+  
+  .contact-elements {
+    max-width: 100%;
+    display: block;
+  }
+  
+  .contact-elements ul {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+  }
+  .contact-elements ul li {
+    margin: 0 0 0.25em 0;
+    clear: both;
+    width: 100%;
+  }
+  .contact-elements ul li:last-child {
+    margin: 0;
+  }
+  .contact-elements ul li p {
+    margin: 0;
+    padding: 0;
+    float: left;
+  }
+  .contact-elements ul li p.right {
+    float: right;
+  }
+  .contact-elements ul li .divider {
+      border: 0;
+      margin-top: 60px;
+    margin-bottom: 15px;
+      border-bottom: 1px dashed #ccc;
+      background: #eaeaea;
+      opacity:.5;
+  }
+  .contact-elements ul li, .req {
+      font-size:15px;
+      color:#63a7d6;
+      font-variant:small-caps;
+      text-transform:lowercase;
+      font-weight:bolder;
+  }
+  .contact-elements label {
+    display: block;
+    margin: 0 0 0.5em 0;
+    color: #4f6fad;
+    font-size: 1em;
+  }
+  .contact-elements input {
+    margin: 0 0 0.5em 0;
+    border: 2px solid #ccc;
+    padding: 6px 10px;
+    color: #000000;
+    font-size: 1em;
+    border-radius: 10px;
+    
+  }
+  .contact-elements textarea {
+    border: 2px solid #ccc;
+    padding: 6px 10px;
+    width: 100%;
+    color: #000000;
+    resize:none;
+    overflow:auto;
+    margin-top: 20px;
+    border-radius: 10px;
+  }
+  .ninde{
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+  }
+  .contact-container{
+    display: flex;
+    justify-content: center;
+    padding: 20px;
+    flex-direction: row;
+    align-items: center;
+
+  }
+  
+  .contact-elements small {
+    color: #4f6fad;
+    margin: 0 0 0 0.5em;
+  }
+  .centero{
+    width: 100%;
+  }
+  
+  @media only screen and (max-width: 900px) {
+    .div.contact-elements p.pull-right {
+      float: none;
+    }
+    .center-btn {
+      text-align: left;
+    }
+    input {
+      width: 100%;
+    }
+  
+    label {
+      width: 100%;
+      display: inline-block;
+      float: left;
+      clear: both;
+    }
+  
+    li, p {
+      width: 100%;
+    }
+  
+    input.btn {
+      margin: 0 0 0.5em;
+    }
+  
+    li small {
+      display: none;
+    }
+    .contact-container{ 
+      flex-direction:column;
+    
+    }
+  }
+.ourserv{
+ width: 100%;
+ height:auto;
+ display:inline-flex;
+ background-color:#48ff61 ;
+ align-items: center;
+ align-content: center;
+ padding: 20px;
+
+}
+.ouservimage{
+  height: 100%;
+  width: 30%;
+  background-image: url('./src/Untitled-1.png');
+  background-repeat: no-repeat;
+  background-position: 0%;
+  background-size: cover;
+  border-radius: 5px;
+  color: #fff;
+  padding: 20px;
+}
+
+.tablegrid{
+  width: 60%;
+}
+.image-grid {
+display: inline-flex; 
+margin: 0px 10px 10px 0px;
+}
+
+.image-item {
+  position: relative;
+  overflow: hidden;
+  border-radius: 10px;
+background-color: #fff;
+  max-width:  130px;
+  margin-right: 10px;
  
+}
+
+.image-item svg {
+  width: 100%;
+  height: auto;
+  display: block;
+}
+.nahe{
+  padding: 7%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: left;
+  
+}
+.nahreft{
+  width: 40%;
+  padding: 0%;
+}
+.nahright{
+  width: 40%; 
+  padding: 0%;
+}
+.mission{
+  width: 100%;
+  display:contents;
+  text-align: left;
+  padding: 10px;
+}
+.goal{
+  background-color: #ff5a00;
+  width: 40px;
+  float: left;
+  border-radius: 10px;
+  margin-right: 10px;
+}
+.noble{
+  display: inline-flex;
+  justify-content: center;
+}
+.nobleicon{
+  background-color: #ff5a00;
+  width: 50px;
+  border-radius: 10px;
+  margin-right: 10px;
+  height: 50px;
+}
+.nobleicon svg{
+  width: 40px;
+}
 
 footer {
     background-color: #333;
     color: #fff;
     padding: 10px;
     text-align: center;
+    position: static;
+    z-index: 1000;
+}
+.logof{
+  display: flex;
+  padding: 20px 0px 0px 20px;
+  align-items: center;
+}
+.footer-content{
+  display: flex;
+  align-content: center;
+}
+.menuf{
+  display: flex;
+  align-items:flex-end;
+  color: #fff;
+  padding: 0% 15% 0% 15%;
+}
+.menuf a{
+  color:#fff;
+}
+.gost{
+  display: flex;
+    align-items: center;
+  height: 10px;
+  width: 10px;
+}
+.line{
+  height: 2px;
+  width: 80%;
+  background-color: white;
+  display: flex;
+  justify-content: center;
+  margin: 0% 10% 0% 10%;
+
 }
 
 @media only screen and (max-width: 600px) {
@@ -405,12 +767,22 @@ footer {
         margin: 10px 0;
     }
 
-    section {
-        padding: 20px;
-    }
     .cards-section {
         flex-direction: column;
         align-items: center;
+    }
+    .nahe{
+      display: contents;
+      padding: 10%;
+      
+    }
+    .nahreft{
+      width: 80%;
+      padding: 10%;
+    }
+    .nahright{
+      width: 80%; 
+      padding: 10%;
     }
 
     .card {
@@ -460,4 +832,3 @@ footer {
         font-size: 5vw;
     }
 }
-
