change class herocontact to id  nre

--- a/styles.css
+++ b/styles.css
@@ -703,7 +703,7 @@ background-color: #fff;
 .headercontact{
   padding: 40px 0px 0px 0px;
 }
-.herocontac{
+#herocontac{
   background-color: #000000;
   width: 100%;
   display: block;
